...
  ConsumerState<GuidedConnectScreen> createState() =>
      _GuidedConnectScreenState();
}

class _GuidedConnectScreenState extends ConsumerState<GuidedConnectScreen> {
  final _formKey = GlobalKey<FormState>();
  final _host = TextEditingController(text: 'localhost');
  final _port = TextEditingController(text: '1883');
  final _base = TextEditingController(text: 'zigbee2mqtt');
  final _username = TextEditingController();
  final _password = TextEditingController();

  MqttProtocol _protocol = MqttProtocol.tcp;
...
